crates/solidity/testing/snapshots/bindings_output/yul/constructor_params/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:2:17]
   │
 2 │ ╭─▶     constructor (uint x) {
   ┆ ┆   
 6 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     constructor (uint x) {
   │     ─────┬─────  
   │          ╰─────── unresolved
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
